Fix height of token and vertical align of the close button

--- a/tokenize/jquery.tokenize.css
+++ b/tokenize/jquery.tokenize.css
@@ -45,10 +45,11 @@ div.Tokenize ul.Tokens li.SearchField
 
 div.Tokenize ul.Tokens li.Token
 {
-    margin: 2px 0px 0px 2px;
+    margin: 2px 0 0 2px;
     border: 1px solid #ccd5e3;
     background-color: #eff2f7;
     line-height: 16px;
+    height: 16px;
     padding: 0 5px;
 
     border-radius: 3px;
@@ -68,6 +69,7 @@ div.Tokenize ul.Tokens li.Token a.Close
 {
     font-size: 16px;
     float: right;
+    margin-top: 1px;
     margin-left: 5px;
     cursor: pointer;
     color: #a6b4ce;
